changed projects section spacing and gave every single project a picture. Only issue is that, buttons and components don't move when hovered over anymore.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,6 +41,7 @@ a {
 
 /* a:hover{
     color: rgba(53, 80, 162, 0.3);
+    transform: translateY(-5px);
 } */
 
 .profile-pic{
